<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MRSLMaintenance</string>
    <string name="site_title_hint">Enter a title for your site.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site_title_label">Site name</string>
    <string name="site_system_label">System</string>
    <string name="site_address_label">Address</string>
    <string name="site_description_label">Description</string>
    <string name="site_engineer_label">Engineeer</string>
    <string name="site_plant_name_label">Plant name</string>
    <string name="title_activity_site_list">Sites</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">MRSL</string>
    <string name="title_activity_report">Reports</string>
    <string name="report_title">Reports:</string>
    <string name="title_activity_equipment">Equipment</string>
    <string name="title_activity_equipment_camera">Equipment Camera</string>
    <string name="new_report">New Report</string>
    <string name="menu_equipment_title">Equipment</string>
    <string name="new_equipment">New equipment</string>
    <string name="add_equipment">Add equipment</string>
    <string name="title_activity_equipment_list">Equipment List</string>
    <string name="select_site">Select site</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_site">Site</string>
    <string name="new_site">New site</string>
    <string name="change_site">Change site</string>
    <string name="delete_site">Delete site</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="new_item">New</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="equipments">Equipment</string>
    <string name="sites">Sites</string>
    <string name="add_item">Add</string>
    <string name="menu_view_equipment_list">View</string>
    <string name="title_activity_site_new">New Site</string>
    <string name="edit_item">Edit</string>
    <string name="title_activity_equipment_new">New Equipment</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="title_activity_controller">MRSL Maintenance</string>
    <string name="take_picture">Take picture</string>
    <string name="cameras">Cameras</string>
    <string name="new_image">New image</string>
    <string name="images">Images</string>
    <string name="title_activity_report_new">New Report</string>
    <string name="title_activity_report_new_equip">New Equipment</string>
    <string name="title_activity_equip_new_image">Choose Image</string>
    <string name="site_title">Sites:</string>
    <string name="Equipment_title">Equipments:</string>
    <string name="edit_site">Edit Site</string>
    <string name="menu_report_new_save">Save Report</string>
    <string name="menu_site_list_new">New Site</string>
    <string name="menu_site_new_save">Save Site</string>
    <string name="menu_site_edit">Edit Site</string>
    <string name="menu_site_save">Save Site</string>
    <string name="equipment_title">Equipment:</string>
    <string name="site_address_title">Address:</string>
    <string name="name_title">Name:</string>
    <string name="menu_site_new_delete">Delete</string>
    <string name="edit_equip">Edit</string>
    <string name="del_equip">Delete</string>
    <string name="add_equip">Add</string>
    <string name="title_activity_image_list">Images</string>
    <string name="menu_image_edit">Edit Image</string>
    <string name="menu_image_add">New Image</string>
    <string name="menu_image_del">Delete Image</string>
    <string name="email">Send Email</string>
    <string name="rest">-Rest Test-</string>
    <string name="choose_report">Choose report to email:</string>
    <string name="email_report">Email Report</string>
    <string name="email_list">Emails</string>
    <string name="email_select">Select Emails</string>
    <string name="email_cb">Select</string>
    <string name="email_del_cb">Delete</string>
    <string name="title_activity_rest_test">RestTestActivity</string>
    <string name="title_activity_rest_update">Change to earlier date, if required:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_rest_time">Change time, if required:</string>
</resources>
