<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_view_site_list"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_view_equipment_list"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_add_site_list"
        android:icon="@android:drawable/ic_menu_set_as"
        android:visible="false"
        android:title="@string/add_item"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_alter_site_list"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/change"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_delete_site_list"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_new_site_list"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_item"
        app:showAsAction="ifRoom" />
</menu>